# Rubix-Cube-Solving-Robot-Simulation

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rubix_cube/share/rubix_cube/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh  rubix.urdf
install/rubix_cube/share/rubix_cube/cmake/: rubix_cubeConfig.cmake
install/rubix_cube/share/rubix_cube/meshes/: Center_Part.stl
log/: latest_build
src/rubix_cube/: CMakeLists.txt  package.xml  rubix.urdf
src/rubix_cube/launch/: rubix_launcher.launch
src/rubix_cube/meshes/: Corner Square.stl  Edge Square.stl  Middle Square.stl  Moveable Rubik's Cube.stl
